# ligu-cimg

./: .gitignore  .npmrc  CMakeLists.txt  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.json  type.d.ts
.github/workflows/: release-github-pkg.yaml
idl/: .gitignore  cimg-wasm.idl  ligu-cimg.idl
include/: CImg.h  jconfig.h  overriden.h
lib/: helper.ts  index.ts  ligu-cimg.d.ts  ligu.ts  package.json
src/: cimg-wasm.cc  cimg-wasm.h  idl-wrapper.cc  ligu-cimg.cc  ligu-cimg.h  test.cc
tests/: cimg-wasm.js  test.cc
